Add functional test

--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -715,6 +715,10 @@
             Some text some text some text some text some text some text some text. Some text some text some text some text some text some text some text. Some text some text some text some text some text some text some text some text some text some text some text some text some text some text. Some text some text some text some text some text some text. Some text some text some text some text some text some text some text.
           </panel>
         </div>
+        <p><strong>Test popover has no stray space</strong>
+          (<popover><template #content>content</template>There should be no stray space before this</popover>)</p>
+        <p><strong>Test tooltip has no stray space</strong>
+          (<tooltip><template #content>content</template>There should be no stray space before this</tooltip>)</p>
         <p><strong>Test search indexing</strong></p>
         <p><strong>Test PlantUML live reload without include</strong></p>
         <pic src="/test_site/diagrams/activity.png" alt="activity diagram"></pic>
