Add functional test

--- a/packages/cli/test/functional/test_site/expected/testAltFrontMatterParsing.html
+++ b/packages/cli/test/functional/test_site/expected/testAltFrontMatterParsing.html
@@ -276,5 +276,17 @@
             })
         }
     </script>
+<script type="module">
+    import mermaid from 'https://unpkg.com/mermaid@10/dist/mermaid.esm.min.mjs';
+    document.addEventListener('DOMContentLoaded', () => {
+      Vue.directive('mermaid', {
+        inserted: function(el) {
+          mermaid.run({
+            nodes: [el]
+          });
+        }
+      });
+    });
+  </script>
 
 </html>
