--- a/packages/cli/test/functional/test_site_templates/test_portfolio/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_portfolio/expected/index.html
@@ -97,7 +97,7 @@
               <p>Example using icons</p>
             </template>
             <box type="warning">
-              Some icons are not available in the libraries MarkBind supports! Please ensure that
+              Some icons are not available in the libraries that MarkBind supports! Please ensure that
               the desired icons are available before choosing this option. For more information regarding
               icons, please refer to <a href="https://markbind.org/userGuide/formattingContents.html#icons" target="_blank">this section of our User Guide</a></box>
             <i class="fa-brands fa-square-js fa-2xl"></i>
