--- a/packages/cli/test/functional/test_site_templates/test_portfolio/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_portfolio/expected/index.html
@@ -149,7 +149,7 @@
                 <iframe src="https://nus-cs3281.github.io/2024-dashboard/#/widget/?search=Reposense&sort=groupTitle&sortWithin=title&timeframe=commit&mergegroup=&groupSelect=groupByAuthors&breakdown=false&since=2023-12-01&tabOpen=true&tabType=authorship&tabAuthor=asdfghjkxd&tabRepo=reposense%2Freposense%5Bmaster%5D&authorshipIsMergeGroup=false&authorshipFileTypes=java~md&authorshipIsBinaryFileTypeChecked=false&authorshipIsIgnoredFilesChecked=false&chartGroupIndex=5&chartIndex=0" width="100%"></iframe>
               </div>
               <div class="card-body">
-                <p class="card-text">Some further elaboration of the project can be added here</p>
+                <p class="card-text">Some further elaboration of the project can be added here.</p>
                 <thumbnail src="/contents/assets/java-icon.svg" size="50"></thumbnail>
               </div>
               <div class="card-body">
