Update expected functional test

--- a/packages/cli/test/functional/test_site_table_plugin/expected/others/table_to_be_included.html
+++ b/packages/cli/test/functional/test_site_table_plugin/expected/others/table_to_be_included.html
@@ -29,7 +29,7 @@
     <div id="flex-body">
       <div id="content-wrapper">
         <div class="table-responsive">
-          <table class="sortable-searchable-table" id="datatable-0" v-datatable>
+          <table class="markbind-table table table-bordered table-striped  sortable-searchable-table" id="datatable-0" v-datatable>
             <thead>
               <tr>
                 <th>Name</th>
