--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -402,6 +402,18 @@
           </div>
           <p><strong>HTML include</strong></p>
           <div>
+
+
+
+
+
+
+
+
+
+
+
+
             <p>This is a HTML document</p>
 
             <span>It is <strong>possible</strong> to use Markdown in HTML</span>
@@ -534,8 +546,7 @@
               <p><strong>same test with panels</strong></p>
             </template></panel>
           <p><strong>Trimmed include</strong></p>
-          <p><strong><span><br>
-                Fragment with leading spaces and newline</span></strong></p>
+          <p><strong><span>Fragment with leading spaces and newline</span></strong></p>
           <p><strong>Trimmed include fragment</strong></p>
           <p><strong>Before | <span>Fragment with leading spaces and newline</span> | After</strong></p>
           <p><strong>Include with custom variables</strong></p>
