Update functional code

--- a/packages/cli/test/functional/test_site/expected/testAnnotate.html
+++ b/packages/cli/test/functional/test_site/expected/testAnnotate.html
@@ -459,6 +459,7 @@
 <script type="module">
     import mermaid from 'https://unpkg.com/mermaid@10/dist/mermaid.esm.min.mjs';
     document.addEventListener('DOMContentLoaded', () => {
+      mermaid.initialize({});
       Vue.directive('mermaid', {
         inserted: function(el) {
           mermaid.run({
