--- a/packages/cli/test/functional/test_site/expected/testList.html
+++ b/packages/cli/test/functional/test_site/expected/testList.html
@@ -240,7 +240,7 @@
           <li>One item with text-icons of lists</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
-          <li texts="(a),(b),(c)" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
+          <li texts="['(a)','(b)','(c)']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
             <div>item 1</div>
           </li>
         </ul>
@@ -300,7 +300,7 @@
           <li>Text-icons of lists test</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
-          <li texts="(a),(b),(c)" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
+          <li texts="['(a)','(b)','(c)']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
             <div>item 1</div>
           </li>
           <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(b)</span>
@@ -314,7 +314,7 @@
           <li>Text-icons of lists outflow test</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
-          <li texts="(a),(b),(c)" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
+          <li texts="['(a)','(b)','(c)']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
             <div>item 1</div>
           </li>
           <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(b)</span>
@@ -432,13 +432,13 @@
           <li>Text inheritance test with text-icons of lists</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
-          <li texts="11,12,13,14" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">11</span>
+          <li texts="['11','12','13','14']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">11</span>
             <div>Item A</div>
           </li>
           <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">12</span>
             <div>Item B
               <ul style="list-style-type: none; padding-inline-start: 0px;">
-                <li texts="21,22,23,24" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">21</span>
+                <li texts="['21','22','23','24']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">21</span>
                   <div>Sub-item B1</div>
                 </li>
                 <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">22</span>
@@ -447,7 +447,7 @@
                 <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">23</span>
                   <div>Sub-item B3
                     <ul style="list-style-type: none; padding-inline-start: 0px;">
-                      <li texts="31,32,33,34" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">31</span>
+                      <li texts="['31','32','33','34']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">31</span>
                         <div>Sub-sub-item B3.1</div>
                       </li>
                       <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">32</span>
