Fix cannot override

--- a/packages/cli/test/functional/test_site/expected/testList.html
+++ b/packages/cli/test/functional/test_site/expected/testList.html
@@ -328,6 +328,23 @@
           </li>
         </ul>
         <ol>
+          <li>Text-icons of lists stop on override test</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li texts="['(a)','(b)','(c)','(d)']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(b)</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">OVERRIDE</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">OVERRIDE</span>
+            <div>item 1</div>
+          </li>
+        </ul>
+        <ol>
           <li>Basic structure</li>
         </ol>
         <ul>
