--- a/packages/cli/test/functional/test_site/expected/testList.html
+++ b/packages/cli/test/functional/test_site/expected/testList.html
@@ -345,6 +345,40 @@
           </li>
         </ul>
         <ol>
+          <li>Text-icons of lists does not stop on once override test</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li texts="['(a)','(b)','(c)','(d)']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(a)</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(b)</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">OVERRIDE</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">(c)</span>
+            <div>item 1</div>
+          </li>
+        </ul>
+        <ol>
+          <li>Text-icons of lists can use double escape to include quote test</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li texts="['\'a\'','\'b\'','\'c\'','\'d\'']" style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">'a'</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">'b'</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">'c'</span>
+            <div>item 1</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">'d'</span>
+            <div>item 1</div>
+          </li>
+        </ul>
+        <ol>
           <li>Basic structure</li>
         </ol>
         <ul>
