--- a/packages/cli/test/functional/test_site/expected/testMermaid.html
+++ b/packages/cli/test/functional/test_site/expected/testMermaid.html
@@ -283,19 +283,9 @@
             C-->D;
           </div>
         </div>
-        <panel type="minimal"><template #header>
+        <panel type="minimal" src="/test_site/testMermaidFragment._include_.html"><template #header>
             <p>This is to test Mermaid diagrams works when included inside a panel.</p>
-          </template>
-          <div>
-            <div class="mermaid" v-mermaid>
-              graph TD;
-              A-->B;
-              A-->C;
-              B-->D;
-              C-->D;
-            </div>
-          </div>
-        </panel>
+          </template></panel>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
         <div class="nav-component slim-scroll">
