--- a/packages/cli/test/functional/test_site/expected/testMath.html
+++ b/packages/cli/test/functional/test_site/expected/testMath.html
@@ -542,5 +542,18 @@ M834 80h400000v40h-400000z" />
             })
         }
     </script>
+<script type="module">
+    import mermaid from 'https://unpkg.com/mermaid@10/dist/mermaid.esm.min.mjs';
+    document.addEventListener('DOMContentLoaded', () => {
+      mermaid.initialize({});
+      Vue.directive('mermaid', {
+        inserted: function(el) {
+          mermaid.run({
+            nodes: [el]
+          });
+        }
+      });
+    });
+  </script>
 
 </html>
