--- a/packages/cli/test/functional/test_site/expected/testMermaidInclude._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testMermaidInclude._include_.html
@@ -1,7 +1,7 @@
-<div class="mermaid" v-mermaid>
-  graph TD;
-  A-->B;
-  A-->C;
-  B-->D;
-  C-->D;
-</div>
+<pre class="mermaid">
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
+</pre>
