--- a/packages/cli/test/functional/test_site/expected/testMath.html
+++ b/packages/cli/test/functional/test_site/expected/testMath.html
@@ -542,12 +542,13 @@ M834 80h400000v40h-400000z" />
             })
         }
     </script>
+<script src="/test_site/plugins/mermaid/mermaid.min.js"></script>
 <script type="module">
     window.mermaidPromise = null;
     
     const loadMermaid = () => {
       if (window.mermaidPromise === null) {
-        window.mermaidPromise = import('https://unpkg.com/mermaid@10/dist/mermaid.esm.min.mjs')
+        window.mermaidPromise = import('./mermaidAssets/mermaid.min.js')
           .then(({ default: mermaid }) => {
             mermaid.initialize({
               startOnLoad: false,
