Update relative path
1. Relative path now follows our convention to be more implicit.
2. Updated test cases.

--- a/packages/cli/test/functional/test_site/expected/testAntiFOUCStyles.html
+++ b/packages/cli/test/functional/test_site/expected/testAntiFOUCStyles.html
@@ -306,7 +306,7 @@
     
     const loadMermaid = () => {
       if (window.mermaidPromise === null) {
-        window.mermaidPromise = import('./mermaidAssets/mermaid.min.js')
+        window.mermaidPromise = import('mermaidAssets/mermaid.min.js')
           .then(({ default: mermaid }) => {
             mermaid.initialize({
               startOnLoad: false,
