--- a/packages/cli/test/functional/test_site/expected/bugs/index.html
+++ b/packages/cli/test/functional/test_site/expected/bugs/index.html
@@ -285,7 +285,7 @@
     
     const loadMermaid = () => {
       if (window.mermaidPromise === null) {
-        window.mermaidPromise = import('./mermaidAssets/mermaid.min.js')
+        window.mermaidPromise = import('mermaidAssets/mermaid.min.js')
           .then(({ default: mermaid }) => {
             mermaid.initialize({
               startOnLoad: false,
