--- a/packages/cli/test/functional/test_site/expected/testMermaid.html
+++ b/packages/cli/test/functional/test_site/expected/testMermaid.html
@@ -367,7 +367,7 @@ graph TD;
     
     const loadMermaid = () => {
       if (window.mermaidPromise === null) {
-        window.mermaidPromise = import('./mermaidAssets/mermaid.min.js')
+        window.mermaidPromise = import('mermaidAssets/mermaid.min.js')
           .then(({ default: mermaid }) => {
             mermaid.initialize({
               startOnLoad: false,
