--- a/packages/cli/test/functional/test_site/expected/testPopovers.html
+++ b/packages/cli/test/functional/test_site/expected/testPopovers.html
@@ -366,13 +366,12 @@
             })
         }
     </script>
-<script src="/test_site/plugins/mermaid/mermaid.min.js"></script>
 <script type="module">
     window.mermaidPromise = null;
     
     const loadMermaid = () => {
       if (window.mermaidPromise === null) {
-        window.mermaidPromise = import('mermaidAssets/mermaid.min.js')
+        window.mermaidPromise = import('https://unpkg.com/mermaid@10/dist/mermaid.esm.min.mjs')
           .then(({ default: mermaid }) => {
             mermaid.initialize({
               startOnLoad: false,
