Update cheerio to v1.1.2 in cli package

--- a/packages/cli/test/functional/test_site/expected/needsrenderedplugin._include_.html
+++ b/packages/cli/test/functional/test_site/expected/needsrenderedplugin._include_.html
@@ -1,1 +1,9 @@
-<panel><span slot="header" class="card-title"><b>header</b></span> Content of panel</panel>
+<html>
+
+<head></head>
+
+<body>
+  <panel><span slot="header" class="card-title"><b>header</b></span> Content of panel</panel>
+</body>
+
+</html>
