--- a/packages/cli/test/functional/test_site/expected/testMermaidInclude._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testMermaidInclude._include_.html
@@ -1,7 +1,15 @@
-<pre class="mermaid">
+<html>
+
+<head></head>
+
+<body>
+  <pre class="mermaid">
 graph TD;
-    A-->B;
-    A-->C;
-    B-->D;
-    C-->D;
+    A--&gt;B;
+    A--&gt;C;
+    B--&gt;D;
+    C--&gt;D;
 </pre>
+</body>
+
+</html>
