--- a/packages/cli/test/functional/test_site/expected/testOcticonInPage.html
+++ b/packages/cli/test/functional/test_site/expected/testOcticonInPage.html
@@ -29,50 +29,64 @@
 
 <body>
   <div id="app">
+    <html>
 
-    <div>
-      <header>
-        <navbar type="dark" default-highlight-on="sibling-or-child">
-          <template #brand><a href="/" title="Home" class="navbar-brand">MarkBind Test Site</a></template>
-          <li><a class="nav-link" href="/test_site/bugs/index.html">Open Bugs</a></li>
-        </navbar>
-        <div class="bg-info display-4 text-center text-white">
-          <br>
-          Test Jumbotron<br>
-          <br>
-        </div>
-      </header>
-      <p><strong>Relative Link Test</strong> This is a relative Intra-Site link in a layout (see <a href="/test_site/index.html#heading-with-hidden-keyword">link</a>)</p>
-    </div>
-    <div id="flex-body">
-      <overlay-source id="site-nav" tag-name="nav" to="site-nav">
-        <div class="nav-component slim-scroll"></div>
-      </overlay-source>
-      <div id="content-wrapper">
-        <breadcrumb></breadcrumb>
+    <head></head>
 
-        <quiz>
-          <template #intro>
-            <div>
-              There is an octicon icon in this quiz.
-            </div>
-          </template>
-          <question type="checkbox"><template #hint>
-              <p>An octicon icon is supposed to appear here ---&gt; <svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-git-pull-request" aria-hidden="true">
-                  <path fill-rule="evenodd" d="M7.177 3.073L9.573.677A.25.25 0 0110 .854v4.792a.25.25 0 01-.427.177L7.177 3.427a.25.25 0 010-.354zM3.75 2.5a.75.75 0 100 1.5.75.75 0 000-1.5zm-2.25.75a2.25 2.25 0 113 2.122v5.256a2.251 2.251 0 11-1.5 0V5.372A2.25 2.25 0 011.5 3.25zM11 2.5h-1V4h1a1 1 0 011 1v5.628a2.251 2.251 0 101.5 0V5A2.5 2.5 0 0011 2.5zm1 10.25a.75.75 0 111.5 0 .75.75 0 01-1.5 0zM3.75 12a.75.75 0 100 1.5.75.75 0 000-1.5z" />
-                </svg></p>
-            </template><template #header>
-              <p>There is an octicon icon in this question.</p>
-            </template></question>
-        </quiz>
-        <p><strong>There is one octicon icon in this page content.</strong></p>
-        <p><strong>Open up console. Only octicon stylesheet should be loaded!</strong></p>
+    <body>
+      <div>
+        <header>
+          <navbar type="dark" default-highlight-on="sibling-or-child">
+            <template #brand><a href="/" title="Home" class="navbar-brand">MarkBind Test Site</a></template>
+            <li><a class="nav-link" href="/test_site/bugs/index.html">Open Bugs</a></li>
+          </navbar>
+          <div class="bg-info display-4 text-center text-white">
+            <br>
+            Test Jumbotron<br>
+            <br>
+          </div>
+        </header>
+        <p><strong>Relative Link Test</strong> This is a relative Intra-Site link in a layout (see <a href="/test_site/index.html#heading-with-hidden-keyword">link</a>)</p>
       </div>
-      <overlay-source id="page-nav" tag-name="nav" to="page-nav">
-        <div class="nav-component slim-scroll">
+      <div id="flex-body">
+        <overlay-source id="site-nav" tag-name="nav" to="site-nav">
+          <div class="nav-component slim-scroll"></div>
+        </overlay-source>
+        <div id="content-wrapper">
+          <breadcrumb></breadcrumb>
+          <html>
+
+          <head></head>
+
+          <body>
+            <quiz>
+              <template #intro>
+                <div>
+                  There is an octicon icon in this quiz.
+                </div>
+              </template>
+              <question type="checkbox"><template #hint>
+                  <p>An octicon icon is supposed to appear here ---&gt; <svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-git-pull-request" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M7.177 3.073L9.573.677A.25.25 0 0110 .854v4.792a.25.25 0 01-.427.177L7.177 3.427a.25.25 0 010-.354zM3.75 2.5a.75.75 0 100 1.5.75.75 0 000-1.5zm-2.25.75a2.25 2.25 0 113 2.122v5.256a2.251 2.251 0 11-1.5 0V5.372A2.25 2.25 0 011.5 3.25zM11 2.5h-1V4h1a1 1 0 011 1v5.628a2.251 2.251 0 101.5 0V5A2.5 2.5 0 0011 2.5zm1 10.25a.75.75 0 111.5 0 .75.75 0 01-1.5 0zM3.75 12a.75.75 0 100 1.5.75.75 0 000-1.5z" />
+                    </svg></p>
+                </template><template #header>
+                  <p>There is an octicon icon in this question.</p>
+                </template></question>
+            </quiz>
+            <p><strong>There is one octicon icon in this page content.</strong></p>
+            <p><strong>Open up console. Only octicon stylesheet should be loaded!</strong></p>
+          </body>
+
+          </html>
         </div>
-      </overlay-source>
-    </div>
+        <overlay-source id="page-nav" tag-name="nav" to="page-nav">
+          <div class="nav-component slim-scroll">
+          </div>
+        </overlay-source>
+      </div>
+    </body>
+
+    </html>
   </div>
 </body>
 <script src="/test_site/markbind/js/bootstrap-utility.min.js"></script>
