--- a/packages/cli/test/functional/test_site/expected/testPanels/NestedPanel._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels/NestedPanel._include_.html
@@ -1,3 +1,11 @@
-<panel src="/test_site/testPanels/NormalPanelContent._include_.html" expanded panelId="nested-panel"><template #header>
-    <h2 id="nested-panel">Nested Panel<a class="fa fa-anchor" href="#nested-panel" onclick="event.stopPropagation()"></a></h2>
-  </template></panel>
+<html>
+
+<head></head>
+
+<body>
+  <panel src="/test_site/testPanels/NormalPanelContent._include_.html" expanded panelid="nested-panel"><template #header>
+      <h2 id="nested-panel">Nested Panel<a class="fa fa-anchor" href="#nested-panel" onclick="event.stopPropagation()"></a></h2>
+    </template></panel>
+</body>
+
+</html>
