--- a/packages/cli/test/functional/test_site/expected/testPanels/NormalPanelContent._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels/NormalPanelContent._include_.html
@@ -1,1 +1,9 @@
-<h3 id="normal-panel-content-heading">Normal panel content heading<a class="fa fa-anchor" href="#normal-panel-content-heading" onclick="event.stopPropagation()"></a></h3>
+<html>
+
+<head></head>
+
+<body>
+  <h3 id="normal-panel-content-heading">Normal panel content heading<a class="fa fa-anchor" href="#normal-panel-content-heading" onclick="event.stopPropagation()"></a></h3>
+</body>
+
+</html>
