--- a/packages/cli/test/functional/test_site/expected/testPanels/PanelSourceContainsScript._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels/PanelSourceContainsScript._include_.html
@@ -1,6 +1,14 @@
-<h1 id="h1-text">
+<html>
+
+<head></head>
+
+<body>
+  <h1 id="h1-text">
 
 
-  h1 text
-  <a class="fa fa-anchor" href="#h1-text" onclick="event.stopPropagation()"></a>
-</h1>
+    h1 text
+    <a class="fa fa-anchor" href="#h1-text" onclick="event.stopPropagation()"></a>
+  </h1>
+</body>
+
+</html>
