--- a/packages/cli/test/functional/test_site/expected/testPanels/notInside._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels/notInside._include_.html
@@ -1,1 +1,9 @@
-<h3 id="heading-in-panel-boilerplate">heading in panel boilerplate<a class="fa fa-anchor" href="#heading-in-panel-boilerplate" onclick="event.stopPropagation()"></a></h3>
+<html>
+
+<head></head>
+
+<body>
+  <h3 id="heading-in-panel-boilerplate">heading in panel boilerplate<a class="fa fa-anchor" href="#heading-in-panel-boilerplate" onclick="event.stopPropagation()"></a></h3>
+</body>
+
+</html>
