--- a/packages/cli/test/functional/test_site/expected/sub_site/testBaseUrlInIncludeSrcSubSite._include_.html
+++ b/packages/cli/test/functional/test_site/expected/sub_site/testBaseUrlInIncludeSrcSubSite._include_.html
@@ -1,3 +1,11 @@
-<div>
-  <img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png">
-</div>
+<html>
+
+<head></head>
+
+<body>
+  <div>
+    <img src="/test_site/sub_site/images/I'm not allowed to use my favorite tool.png">
+  </div>
+</body>
+
+</html>
