--- a/packages/cli/test/functional/test_site/expected/testPanels/PanelNormalSource._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testPanels/PanelNormalSource._include_.html
@@ -1,1 +1,9 @@
-<h3 id="panel-normal-source-content-headings">Panel normal source content headings<a class="fa fa-anchor" href="#panel-normal-source-content-headings" onclick="event.stopPropagation()"></a></h3>
+<html>
+
+<head></head>
+
+<body>
+  <h3 id="panel-normal-source-content-headings">Panel normal source content headings<a class="fa fa-anchor" href="#panel-normal-source-content-headings" onclick="event.stopPropagation()"></a></h3>
+</body>
+
+</html>
