--- a/packages/cli/test/functional/test_site/expected/testPanelsDuplicate/boilerTestPanel._include_.html
+++ b/packages/cli/test/functional/test_site/expected/testPanelsDuplicate/boilerTestPanel._include_.html
@@ -1,1 +1,9 @@
-<h3 id="boilerplate-test-for-panel-heading">boilerplate test for panel heading<a class="fa fa-anchor" href="#boilerplate-test-for-panel-heading" onclick="event.stopPropagation()"></a></h3>
+<html>
+
+<head></head>
+
+<body>
+  <h3 id="boilerplate-test-for-panel-heading">boilerplate test for panel heading<a class="fa fa-anchor" href="#boilerplate-test-for-panel-heading" onclick="event.stopPropagation()"></a></h3>
+</body>
+
+</html>
