--- a/packages/cli/test/functional/test_site_templates/test_default/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/index.html
@@ -120,11 +120,11 @@
           </blockquote>
           <p>More info in: <em><a href="https://markbind.org/userGuide/workingWithSites.html" target="_blank">User Guide → Working with Sites</a></em></p>
           <hr>
-          <h5 id="user-guide-full-syntax-reference"><strong>User Guide: Full Syntax Reference</strong><a class="fa fa-anchor" href="#user-guide-full-syntax-reference" onclick="event.stopPropagation()"></a></h5>
+          <h5 id="user-guide-syntax-overview"><strong>User Guide: Syntax Overview</strong><a class="fa fa-anchor" href="#user-guide-syntax-overview" onclick="event.stopPropagation()"></a></h5>
           <blockquote>
-            <p>Refer to our Full Syntax Reference page to find a specific feature or component that you want to use in your MarkBind site.</p>
+            <p>Refer to our Syntax Overview page to find a specific feature or component that you want to use in your MarkBind site.</p>
           </blockquote>
-          <p>More info in: <em><a href="https://markbind.org/userGuide/fullSyntaxReference.html" target="_blank">User Guide → Full Syntax Reference</a></em></p>
+          <p>More info in: <em><a href="https://markbind.org/userGuide/markBindSyntaxOverview.html" target="_blank">User Guide → Syntax Overview</a></em></p>
         </panel>
         <hr>
       </div>
